# CANOPY-PROJET

./: .gitignore  pyproject.toml
canopy/: app.py  ecoute.py
canopy/static/kml/: Madagascar.kml  mada.kml
canopy/templates/: index.html
